# MLX90614-rp2040

./: CMakeLists.txt  README.md  read_temprature.cpp
src/: mlx90614.cpp  mlx90614.h
